--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.active-link{background-color:#ff6899 !important; color: #fff !important;}
